// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin functions/addTestDataFile should execute correctly if all info is provided 1`] = `
Array [
  Object {
    "content": "Y29udGVudA==",
    "message": "[skip ci] 🤖 Added ec/wob-name-classifier-credit test file",
    "owner": "dexpenses",
    "path": "test/data/ec/wob-name-classifier-credit.txt.inactive",
    "repo": "dexpenses-extract",
  },
]
`;

exports[`admin functions/addTestDataFile should execute correctly if all info is provided 2`] = `
Array [
  Object {
    "body": "Receipt to implement:
![ec/wob-name-classifier-credit](https://firebasestorage.googleapis.com/v0/b/dexpenses-207219-test-images/o/ec%2Fwob-name-classifier-credit.jpg?alt=media \\"ec/wob-name-classifier-credit\\")",
    "labels": Array [
      "enhancement",
      "test-data",
    ],
    "owner": "dexpenses",
    "repo": "dexpenses-extract",
    "title": "Implement test receipt ec/wob-name-classifier-credit",
  },
]
`;

exports[`admin functions/addTestDataFile should execute correctly if classifier is missing 1`] = `
Array [
  Object {
    "content": "Y29udGVudA==",
    "message": "[skip ci] 🤖 Added ec/wob-name-credit test file",
    "owner": "dexpenses",
    "path": "test/data/ec/wob-name-credit.txt.inactive",
    "repo": "dexpenses-extract",
  },
]
`;

exports[`admin functions/addTestDataFile should execute correctly if classifier is missing 2`] = `
Array [
  Object {
    "body": "Receipt to implement:
![ec/wob-name-credit](https://firebasestorage.googleapis.com/v0/b/dexpenses-207219-test-images/o/ec%2Fwob-name-credit.jpg?alt=media \\"ec/wob-name-credit\\")",
    "labels": Array [
      "enhancement",
      "test-data",
    ],
    "owner": "dexpenses",
    "repo": "dexpenses-extract",
    "title": "Implement test receipt ec/wob-name-credit",
  },
]
`;

exports[`admin functions/addTestDataFile should execute correctly if paymentMethod is missing 1`] = `
Array [
  Object {
    "content": "Y29udGVudA==",
    "message": "[skip ci] 🤖 Added ec/wob-name-classifier test file",
    "owner": "dexpenses",
    "path": "test/data/ec/wob-name-classifier.txt.inactive",
    "repo": "dexpenses-extract",
  },
]
`;

exports[`admin functions/addTestDataFile should execute correctly if paymentMethod is missing 2`] = `
Array [
  Object {
    "body": "Receipt to implement:
![ec/wob-name-classifier](https://firebasestorage.googleapis.com/v0/b/dexpenses-207219-test-images/o/ec%2Fwob-name-classifier.jpg?alt=media \\"ec/wob-name-classifier\\")",
    "labels": Array [
      "enhancement",
      "test-data",
    ],
    "owner": "dexpenses",
    "repo": "dexpenses-extract",
    "title": "Implement test receipt ec/wob-name-classifier",
  },
]
`;
